kubernetes/default/auth/virtualservice.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: auth
spec:
  gateways:
    - gateway.istio-system.svc.cluster.local
  hosts:
    - "*"
  http:
    - match:
        - uri:
            exact: /login
        - uri:
            exact: /callback
        - uri:
            exact: /logout
      route:
        - destination:
            host: auth
            port:
              number: 8080
